// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authentication API GET /authentication/setup: Check site is not setup. 1`] = `
Object {
  "setup": Array [
    Object {
      "status": false,
    },
  ],
}
`;

exports[`Authentication API GET /authentication/setup: Check site is not setup. 2`] = `
Object {
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "connection": "close",
  "content-length": "28",
  "content-type": "application/json; charset=utf-8",
  "date": toBeDateString<>,
  "etag": Any<String>,
  "vary": "Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Authentication API GET /authentication/setup: Check site is setup now! 1`] = `
Object {
  "setup": Array [
    Object {
      "status": true,
    },
  ],
}
`;

exports[`Authentication API GET /authentication/setup: Check site is setup now! 2`] = `
Object {
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "connection": "close",
  "content-length": "27",
  "content-type": "application/json; charset=utf-8",
  "date": toBeDateString<>,
  "etag": Any<String>,
  "vary": "Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Authentication API POST /authentication/setup: Cannot complete setup a second time 1`] = `
Object {
  "errors": Array [
    Object {
      "code": null,
      "context": null,
      "details": null,
      "help": null,
      "id": Any<String>,
      "message": "Setup has already been completed.",
      "property": null,
      "type": "NoPermissionError",
    },
  ],
}
`;

exports[`Authentication API POST /authentication/setup: Cannot complete setup a second time 2`] = `
Object {
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "connection": "close",
  "content-length": "201",
  "content-type": "application/json; charset=utf-8",
  "date": toBeDateString<>,
  "etag": Any<String>,
  "vary": "Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Authentication API POST /authentication/setup: Complete setup 1`] = `
Object {
  "users": Array [
    Object {
      "accessibility": null,
      "bio": null,
      "cover_image": null,
      "created_at": toBeDateString<>,
      "email": "test@example.com",
      "facebook": null,
      "id": "1",
      "last_seen": null,
      "location": null,
      "meta_description": null,
      "meta_title": null,
      "name": "test user",
      "profile_image": null,
      "slug": "test",
      "status": "active",
      "tour": null,
      "twitter": null,
      "updated_at": toBeDateString<>,
      "url": "http://127.0.0.1:2369/404/",
      "website": null,
    },
  ],
}
`;

exports[`Authentication API POST /authentication/setup: Complete setup 2`] = `
Object {
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "connection": "close",
  "content-length": "420",
  "content-type": "application/json; charset=utf-8",
  "date": toBeDateString<>,
  "etag": Any<String>,
  "vary": "Accept-Encoding",
  "x-cache-invalidate": "/*",
  "x-powered-by": "Express",
}
`;

exports[`Authentication API PUT /authentication/setup/ 1`] = `
Object {
  "users": Array [
    Object {
      "accessibility": null,
      "bio": null,
      "cover_image": null,
      "created_at": toBeDateString<>,
      "email": "test-edit@example.com",
      "facebook": null,
      "id": "1",
      "last_seen": "2021-10-08T09:22:19.000Z",
      "location": null,
      "meta_description": null,
      "meta_title": null,
      "name": "test user edit",
      "profile_image": null,
      "slug": "test-user-edit",
      "status": "active",
      "tour": null,
      "twitter": null,
      "updated_at": toBeDateString<>,
      "url": "http://127.0.0.1:2369/404/",
      "website": null,
    },
  ],
}
`;

exports[`Authentication API PUT /authentication/setup/ 2`] = `
Object {
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "connection": "close",
  "content-length": "462",
  "content-type": "application/json; charset=utf-8",
  "date": toBeDateString<>,
  "etag": Any<String>,
  "vary": "Accept-Encoding",
  "x-cache-invalidate": "/*",
  "x-powered-by": "Express",
}
`;
